Fix background not filling up on smaller screens

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,5 @@
 html {
-    background: url('background.jpg') center top no-repeat;
-    background-size: cover;
+    background: url('background.jpg') no-repeat fixed center top/cover;
     position: relative;
     height: 100%;
 }
@@ -19,5 +18,6 @@ body {
     box-sizing: border-box;
     padding-top: 30px;
     padding-bottom: 30px;
-    margin: 0;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
